<resources>
    <string name="app_name">Mi Lista de Compras</string>
    <string name="next_button">Siguiente</string>
    <string name="name_hint">Tu Nombre</string>
    <string name="create_purchase_list_title">Crear Lista de Compras</string>
    <string name="purchase_list_name_hint">Nombre Lista de Compras</string>
    <string name="purchase_list_date_hint">Fecha de Compra</string>
    <string name="purchase_period_hint">Periodo de Compra</string>
    <string name="save_button">Guardar</string>
    <string name="create_button">Crear Lista</string>
    <string name="add_product_button">Agregar Producto</string>
    <string name="add_products_button">Productos</string>
    <string name="setup_item">Configuración</string>
    <string name="help_item">Ayuda</string>
    <string name="support_item">Soporte</string>
    <string name="contact_item">Contacto</string>
    <string name="dark_theme_switch">Tema Oscuro</string>
    <string name="home_item">Inicio</string>
    <string name="search_item">Buscar</string>
    <string name="profile_item">Perfil</string>
    <string name="edit_item">Modificar</string>
    <string name="delete_item">Eliminar</string>
    <string name="my_profile_label">Mi Perfil</string>
    <string name="my_lists_label">Mis Listas</string>
    <string name="sync_label">Sincronizar</string>
    <string name="notifications_label">Notificaciones</string>
    <string name="firstNameLabel">Nombre</string>
    <string name="lastNameLabel">Apellido</string>
    <string name="phoneLabel">Teléfono</string>
    <string name="emailLabel">Correo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_qty_hint">Cantidad</string>
    <string name="take_picture">Sacar Foto</string>
</resources>