<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@android:string/search_go"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_switch"
        android:title="@string/dark_theme_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/app_bar_setup"
        android:title="@string/setup_item" />
    <item
        android:id="@+id/app_bar_help"
        android:title="@string/help_item">
        <menu>
            <item
                android:id="@+id/app_bar_help_support"
                android:title="@string/support_item" />
            <item
                android:id="@+id/app_bar_help_contact"
                android:title="@string/contact_item" />
        </menu>
    </item>
</menu>