<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseListCreate">

    <TextView
        android:id="@+id/purchaseListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_purchase_list_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/purchaseNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="purchaseListName"
        android:ems="10"
        android:hint="@string/purchase_list_name_hint"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseListTextView" />

    <EditText
        android:id="@+id/purchaseDateEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="purchaseListDate"
        android:ems="10"
        android:hint="@string/purchase_list_date_hint"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseNameEditText" />

    <EditText
        android:id="@+id/purchasePeriodEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="purchaseListPeriod"
        android:ems="10"
        android:hint="@string/purchase_period_hint"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseDateEditText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchasePeriodEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>