<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PurchaseListDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/purchase_list_name_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="purchaseListName"
            android:ems="10"
            android:hint="@string/purchase_list_name_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/purchase_list_date_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="purchaseListDate"
            android:ems="10"
            android:hint="@string/purchase_list_date_hint"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase_list_name_input" />

        <EditText
            android:id="@+id/purchase_list_period_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="purchaseListPeriod"
            android:ems="10"
            android:hint="@string/purchase_period_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase_list_date_input" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:onClick="onSaveButtonClick"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase_list_period_input" />

        <Button
            android:id="@+id/add_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/add_products_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/purchase_list_period_input" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_product_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>